--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@ant-design/icons": "^6.0.0",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.1.0",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -43,11 +44,13 @@
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.6.0",
+        "antd": "^5.27.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "dayjs": "^1.11.18",
         "globals": "^15.14.0",
-        "laravel-vite-plugin": "^2.0",
+        "laravel-vite-plugin": "^1.3.0",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -55,7 +58,7 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
-        "vite": "^7.0.4"
+        "vite": "^5.4.19"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
